--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,34 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: #eeeeee;
 }
 
 .centerStuff {
   text-align: center;
+  margin-top: 30vh;
+}
+.mainLabel{
+  font-size: 25px;
+  color: #666666;
+}
+.mainInput {
+  margin-left: 20px;
+  height: 30px;
+  width: 300px;
 }
 .redButton{
   background-color: red;
   color: white;
-  border-width: 1px;
-  border-style: solid;
-  border-color: black;
-  font-size: 35px;
-  border-radius: 50%;
+  font-size: 35px; 
   margin: 1px;
-  height: 300px;
+  height: 60px;
   width: 300px;
+  border-radius: 10px;
+  margin-top: 30px;
+}
+.redButton:hover {
+  background: orangered;
 }
 .menuBar{
   width: 250px;
